# firrtl3-parser

./: .gitignore  Cargo.toml  README.md  justfile
src/: ast.rs  firrtl.lalrpop  lexer.rs  lib.rs
tests/: lexer.rs  parser.rs
