[package]
name = "firrtl3-parser"
version = "0.1.8"
edition = "2021"
authors = ["Joonho Whangbo <joonho.whangbo@berkeley.edu>"]
description = "A Rust library that can parse a Legacy FIRRTL text file into a typed AST"
repository = "https://github.com/joonho3020/firrtl3-parser.git"
readme = "README.md"
license = "MIT"

[dependencies]
logos = "0.12"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
serde_json = "1.0.139"
num-bigint = "0.4.6"
num-traits = "0.2.19"
thiserror = "2.0.12"
petgraph = "0.7.1"
indextree = "4.7.3"
indextree-macros = "0.1.2"
graphviz-rust = "0.9.3"
indexmap = "2.7.1"
test-case = "3.3.1"
rusty-firrtl = { git = "ssh://git@github.com/joonho3020/rusty-firrtl.git", branch = "main"}

[build-dependencies]
lalrpop = "0.22.1"
